# illinois-hillshade-gen

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
aws/: README.md  config.sh  env.example  launch-zoom.sh  launch.sh  patch-zoom.sh  pull.sh
ilhmp/: __init__.py  boundaries.py  cli.py  counties.py  download.py  hillshade.py  tile.py  viewer.py
ilhmp/templates/: viewer.html
tests/: test_counties.py  test_hillshade.py
