[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilhmp"
version = "0.1.0"
description = "Download Illinois ILHMP elevation data by county and generate styled hillshade tiles for ATAK and offline mapping"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eric Muehlstein", email = "muehlbucks@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["lidar", "hillshade", "illinois", "gis", "mbtiles", "pmtiles", "atak", "dem", "dtm", "dsm"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ilhmp = "ilhmp.cli:app"

[project.urls]
Homepage = "https://github.com/emuehlstein/illinois-hillshade-gen"
Repository = "https://github.com/emuehlstein/illinois-hillshade-gen"
Issues = "https://github.com/emuehlstein/illinois-hillshade-gen/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ilhmp*"]

[tool.setuptools.package-data]
ilhmp = ["templates/*.html"]
