[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ilhmp"
version = "0.1.0"
description = "Download Illinois ILHMP elevation data and generate styled hillshade tiles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eric Muehlstein", email = "muehlbucks@gmail.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gdal = [
    "GDAL",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ilhmp = "ilhmp.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ilhmp = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
